# OpenSkyFinder

./: README.md  setup.cfg  setup.py
requirements/: app.txt
skyfinder/: __init__.py  methods.py
src/: exceptions.py  library.py  skyfinder.py
tests/: conftest.py  test_library.py
